Remove 'specialism' from SEND label

--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -86,7 +86,7 @@
           },
           {
             key: {
-              text: "Special educational needs and disability (SEND) specialism"
+              text: "Special educational needs and disability (SEND)"
             },
             value: {
               text: course.isSend | getSendLabel
