Make subject label singular

--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -91,7 +91,7 @@
             },
             {
               key: {
-                text: "Subject" + ("s" if course.subjects.length > 1 or course.childSubjects.length > 1)
+                text: "Subject"
               },
               value: {
                 html: subjectHtml
