--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -103,7 +103,7 @@
           },
           {
             key: {
-              text: "Subject" + ("s" if course.subjects.length > 1)
+              text: "Subject"
             },
             value: {
               html: subjectHtml
