--- a/app/views/courses/special-educational-needs-disability.njk
+++ b/app/views/courses/special-educational-needs-disability.njk
@@ -43,7 +43,7 @@
 
         {% if course %}
           {{ govukButton({
-            text: "Update SEND specialism"
+            text: "Update SEND"
           }) }}
         {% else %}
           {{ govukButton({
