--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -290,7 +290,7 @@
           },
           {
             key: {
-              text: "Course start"
+              text: "Course start date"
             },
             value: {
               html: courseStartHtml
