Update visually hidden text on change link

--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -118,7 +118,7 @@
                   {
                     href: actions.change + "/campaign?referrer=check",
                     text: "Change",
-                    visuallyHiddenText: "subject"
+                    visuallyHiddenText: "engineers teach physics"
                   }
                 ]
               }
