--- a/app/views/courses/campaign.njk
+++ b/app/views/courses/campaign.njk
@@ -37,7 +37,7 @@
           name: "course[campaign]",
           fieldset: {
             legend: {
-              text: "Is this course for the " + title + " campaign?",
+              text: "Is this course part of the " + title + " programme?",
               classes: "govuk-fieldset__legend--m"
             }
           },
