Conditionally show engineers teach physics item

--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -134,7 +134,7 @@
                 }
               ]
             } if course.status != 3
-          } if course.subjects[0] == "F3",
+          } if course.subjects[0].code == "F3",
           {
             key: {
               text: "Age range"
