--- a/app/views/courses/campaign.njk
+++ b/app/views/courses/campaign.njk
@@ -30,6 +30,10 @@
 
       {% include "_includes/page-heading.njk" %}
 
+      <p class="govuk-body">Engineers teach physics is a new campaign to help engineers become physics teachers.</p>
+
+      <p class="govuk-body">For more information, email <a href="mailto:itt.engagement@education.gov.uk?subject=Engineers%20teach%20physics">itt.engagement@education.gov.uk</a>.</p>
+
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
         {{ govukRadios({
