--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -108,7 +108,7 @@
             } if course.subjectLevel != "further_education",
             {
               key: {
-                text: "Engineers teach physics"
+                text: "Engineers Teach Physics"
               },
               value: {
                 text: "Yes" if course.campaign == "engineersTeachPhysics" else "No"
@@ -118,7 +118,7 @@
                   {
                     href: actions.change + "/campaign?referrer=check",
                     text: "Change",
-                    visuallyHiddenText: "engineers teach physics"
+                    visuallyHiddenText: "Engineers Teach Physics"
                   }
                 ]
               }
