--- a/app/views/courses/subject.njk
+++ b/app/views/courses/subject.njk
@@ -28,10 +28,13 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      {% include "_includes/page-heading.njk" %}
-
       {% if course.subjectLevel == "secondary" %}
+        {% include "_includes/page-heading.njk" %}
         <p class="govuk-body">Your first subject is the main one. It will appear first in the course title. It represents the bursary or scholarship available if applicable.</p>
+      {% else %}
+        {% set headingHtml %}
+          {% include "_includes/page-heading.njk" %}
+        {% endset %}
       {% endif %}
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
@@ -51,7 +54,7 @@
 
           {{ govukSelect({
             idPrefix: "second-subject",
-            name: "course.secondSubject",
+            name: "course[secondSubject][]",
             label: {
               text: "Second subject (optional)",
               classes: "govuk-label--s"
