Show second subject in check answers

--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -35,6 +35,11 @@
                 {% endfor %}
               {% endif %}
             {% endfor %}
+            {% for subject in course.secondSubject %}
+              <li>
+                {{ subject | getSubjectLabel }}
+              </li>
+            {% endfor %}
           </ul>
         {% endset %}
 
