Add check your answers line for course name

--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -57,6 +57,14 @@
           rows: [
             {
               key: {
+                text: "Course name"
+              },
+              value: {
+                text: course.subjects | getCourseName(false)
+              }
+            },
+            {
+              key: {
                 text: "Subject level"
               },
               value: {
