--- a/app/views/subjects.njk
+++ b/app/views/subjects.njk
@@ -1,6 +1,6 @@
-{% extends "_layout.njk" %}
+{% extends "_layout-auth.njk" %}
 
-{% set title = "Autocomplete test" %}
+{% set title = "Subject - autocomplete test" %}
 
 {% block beforeContent %}
 
