--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -50,7 +50,7 @@
           rows: [
             {
               key: {
-                text: "Course name"
+                text: "Course title"
               },
               value: {
                 text: (course.subjectArray | getCourseName('engineersTeachPhysics')) if course.campaign == "engineersTeachPhysics" else (course.subjectArray | getCourseName())
@@ -71,7 +71,7 @@
                     visuallyHiddenText: "subject level"
                   }
                 ]
-              }
+              } if 1 == 0
             },
             {
               key: {
