--- a/app/views/unavailable.njk
+++ b/app/views/unavailable.njk
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">{{ title }}</h1>
+      <h1 class="govuk-heading-l">{{ title }}</h1>
       <p class="govuk-body">You will be able to use the service later.</p>
       <p class="govuk-body">We have not saved your answers. When the service is available, you will have to start again.</p>
       <p class="govuk-body"><a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk">Contact the Becoming a Teacher team</a> if you continue to see this error.</p>
