--- a/app/views/404.njk
+++ b/app/views/404.njk
@@ -6,9 +6,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ title }}</h1>
-      <p class="govuk-body">If you entered a web address, check it is correct.</p>
+      <p class="govuk-body">If you typed a web address, check it is correct.</p>
       <p class="govuk-body">If you pasted the web address, check you copied the entire address.</p>
-      <p class="govuk-body">If the web address is correct or you selected a link or button and you need to speak to someone about this problem <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk">contact the Becoming a Teacher team</a>.</p>
+      <p class="govuk-body">If you have any questions, email <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk">becomingateacher@digital.education.gov.uk</a>.</p>
     </div>
   </div>
 {% endblock %}
