--- a/app/views/_layout-service-unavailable.njk
+++ b/app/views/_layout-service-unavailable.njk
@@ -3,9 +3,6 @@
 
 {% extends "govuk/template.njk" %}
 
-{% from "govuk/components/cookie-banner/macro.njk"       import govukCookieBanner %}
-{% from "_components/footer/macro.njk"                   import appFooter %}
-
 {% block head %}
   {% include "_includes/head.njk" %}
 {% endblock %}
@@ -31,6 +28,7 @@
 {% set footerHtml %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-half">
+    <h2 class="govuk-heading-m">Get help</h2>
     <h3 class="govuk-heading-s govuk-!-margin-bottom-1">
       Email
     </h3>
@@ -40,10 +38,8 @@
 </div>
 {% endset %}
 
-{{ appFooter({
-  classes: "govuk-footer--app",
+{{ govukFooter({
   meta: {
-    title: "Get help",
     html: footerHtml
   }
 }) }}
