Update date example

--- a/app/views/503.njk
+++ b/app/views/503.njk
@@ -6,7 +6,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ title }}</h1>
-      <p class="govuk-body">You’ll be able to use the service from 3pm on Wednesday 2 November 2022.</p>
+      <p class="govuk-body">You’ll be able to use the service from 3pm on Wednesday, 2 November 2022.</p>
       <p class="govuk-body">If you reached this page after submitting information then it has not been saved. You’ll need to enter it again when the service is available.</p>
       <p class="govuk-body">If you have any questions, email <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk">becomingateacher@digital.education.gov.uk</a>.</p>
     </div>
