Change 'Engineers Teach Physics' to 'Engineers teach physics'

--- a/app/views/courses/campaign.njk
+++ b/app/views/courses/campaign.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "courses" %}
 
-{% set title = "Engineers Teach Physics" %}
+{% set title = "Engineers teach physics" %}
 
 {% if course.id %}
   {% set caption = course.name + " (" + course.code + ")" %}
