Add link to engineers teach physics GOV.UK page

--- a/app/views/courses/campaign.njk
+++ b/app/views/courses/campaign.njk
@@ -32,7 +32,9 @@
 
       <p class="govuk-body">{{ title }} is a new campaign to help engineers become physics teachers.</p>
 
-      <p class="govuk-body">For more information, email <a href="mailto:itt.engagement@education.gov.uk?subject={{ title | urlencode }}">itt.engagement@education.gov.uk</a>.</p>
+      <p class="govuk-body">
+        <a class="govuk-link" href="https://www.gov.uk/guidance/offer-an-engineers-teach-physics-course">Find out how to offer an engineers teach physics course</a>.
+      </p>
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
