--- a/app/views/courses/degree/requirements.njk
+++ b/app/views/courses/degree/requirements.njk
@@ -27,7 +27,7 @@
         {% if course.campaign == "engineersTeachPhysics" %}
           Candidates will be advised that their degree subject should match or be closely related to materials science or engineering.
         {% else %}
-          Candidates will be advised that their degree subject should match or be closely related to {{ course.name }}
+          Candidates will be advised that their degree subject should match or be closely related to ‘{{ course.name }}’
         {% endif %}
       {% endset %}
 
