--- a/app/views/users/details.njk
+++ b/app/views/users/details.njk
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-  {% include "_includes/error-summary.njk" %}
+  {% include "_includes/notification-banner.njk" %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -25,6 +25,15 @@
             },
             value: {
               text: user.firstName
+            },
+            actions: {
+              items: [
+                {
+                  href: actions.change,
+                  text: "Change",
+                  visuallyHiddenText: "first name"
+                }
+              ]
             }
           },
           {
@@ -33,6 +42,15 @@
             },
             value: {
               text: user.lastName
+            },
+            actions: {
+              items: [
+                {
+                  href: actions.change,
+                  text: "Change",
+                  visuallyHiddenText: "last name"
+                }
+              ]
             }
           },
           {
@@ -41,6 +59,15 @@
             },
             value: {
               text: user.email
+            },
+            actions: {
+              items: [
+                {
+                  href: actions.change,
+                  text: "Change",
+                  visuallyHiddenText: "email address"
+                }
+              ]
             }
           }
         ]
