--- a/app/views/users/check-your-answers.njk
+++ b/app/views/users/check-your-answers.njk
@@ -88,10 +88,19 @@
           ]
         }) }}
 
-        {{ govukWarningText({
-          text: "The user will be sent an email to tell them you’ve added them to the organisation",
-          iconFallbackText: "Warning"
-        }) }}
+        {% if referrer == "change" %}
+          {% if not (user.email == currentUser.email) %}
+            {{ govukWarningText({
+              text: "The user will be sent an email to tell them you’ve changed their email address",
+              iconFallbackText: "Warning"
+            }) }}
+          {% endif %}
+        {% else %}
+          {{ govukWarningText({
+            text: "The user will be sent an email to tell them you’ve added them to the organisation",
+            iconFallbackText: "Warning"
+          }) }}
+        {% endif %}
 
         {{ govukButton({
           text: "Update user" if referrer == "change" else "Add user"
