Add age range validation

--- a/app/views/courses/age-range.njk
+++ b/app/views/courses/age-range.njk
@@ -44,7 +44,7 @@
 
           {% if errors %}
             <span id="age-range-error" class="govuk-error-message">
-              <div><span class="govuk-visually-hidden">Error:</span> Enter an age range</div>
+              <div><span class="govuk-visually-hidden">Error:</span> Select an age range</div>
             </span>
           {% endif %}
 
