Add location validation

--- a/app/views/courses/location.njk
+++ b/app/views/courses/location.njk
@@ -45,7 +45,7 @@
           hint: {
             text: "Select all that apply"
           },
-          errorMessage: errors | getErrorMessage("location"),
+          errorMessage: errors | getErrorMessage("locations"),
           items: locationOptions
         }) }}
 
