--- a/app/views/courses/applications-open-date.njk
+++ b/app/views/courses/applications-open-date.njk
@@ -29,7 +29,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       {% set headingHtml %}
-        {% include "_includes/page-heading.njk" %}
+        {% include "_includes/page-heading-legend.njk" %}
       {% endset %}
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
@@ -76,7 +76,9 @@
           name: "course[applicationsOpenDate]",
           fieldset: {
             legend: {
-              html: headingHtml
+              html: headingHtml,
+              isPageHeading: true,
+              classes: "govuk-fieldset__legend--l"
             }
           },
           errorMessage: errors | getErrorMessage("applications-open-date"),
