--- a/app/views/courses/subject.njk
+++ b/app/views/courses/subject.njk
@@ -35,7 +35,7 @@
         <p class="govuk-body"><a class="govuk-link" href="https://www.gov.uk/government/publications/funding-initial-teacher-training-itt/funding-initial-teacher-training-itt-academic-year-2023-to-2024#postgraduate-bursaries-and-scholarships">Learn more about the bursaries and scholarships</a></p>
       {% else %}
         {% set headingHtml %}
-          {% include "_includes/page-heading.njk" %}
+          {% include "_includes/page-heading-legend.njk" %}
         {% endset %}
       {% endif %}
 
@@ -72,7 +72,9 @@
             name: "course[subjects][]",
             fieldset: {
               legend: {
-                html: headingHtml
+                html: headingHtml,
+              isPageHeading: true,
+              classes: "govuk-fieldset__legend--l"
               }
             },
             errorMessage: errors | getErrorMessage("subject"),
