Change course title to course name

--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -50,7 +50,7 @@
           rows: [
             {
               key: {
-                text: "Course title"
+                text: "Course name"
               },
               value: {
                 text: (course.subjectArray | getCourseName('engineersTeachPhysics')) if course.campaign == "engineersTeachPhysics" else (course.subjectArray | getCourseName())
