Pluralise subject label if multiple subjects

--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -92,7 +92,7 @@
             },
             {
               key: {
-                text: "Subject"
+                text: "Subject" + ("s" if course.subjectArray.length > 1)
               },
               value: {
                 html: subjectHtml
