--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -228,7 +228,7 @@
             },
             {
               key: {
-                text: "Accredited body"
+                text: "Accredited provider"
               },
               value: {
                 text: course.accreditedBody | getOrganisationLabel
@@ -238,7 +238,7 @@
                   {
                     href: actions.change + "/accredited-body?referrer=check",
                     text: "Change",
-                    visuallyHiddenText: "accredited body"
+                    visuallyHiddenText: "accredited provider"
                   }
                 ]
               }
