--- a/app/views/accredited-bodies/delete.njk
+++ b/app/views/accredited-bodies/delete.njk
@@ -3,9 +3,9 @@
 {% set primaryNavId = "accreditedBodies" %}
 
 {% if hasCourses %}
-  {% set title = "You cannot delete this accredited body" %}
+  {% set title = "You cannot delete this accredited provider" %}
 {% else %}
-  {% set title = "Are you sure you want to delete this accredited body?" %}
+  {% set title = "Are you sure you want to delete this accredited provider?" %}
 {% endif %}
 
 {% set caption = accreditedBody.name %}
@@ -30,13 +30,13 @@
 
         {% if hasCourses %}
 
-          <p class="govuk-body">{{ accreditedBody.name }} is an accredited body for courses run by {{ organisation.name }}.</p>
-          <p class="govuk-body">To delete {{ accreditedBody.name }}, you must first change the accredited body for those courses.</p>
+          <p class="govuk-body">{{ accreditedBody.name }} is an accredited provider for courses run by {{ organisation.name }}.</p>
+          <p class="govuk-body">To delete {{ accreditedBody.name }}, you must first change the accredited provider for those courses.</p>
 
         {% else %}
 
           {{ govukButton({
-            text: "Delete accredited body",
+            text: "Delete accredited provider",
             classes: "govuk-button--warning"
           }) }}
 
