--- a/app/views/accredited-bodies/permissions.njk
+++ b/app/views/accredited-bodies/permissions.njk
@@ -8,7 +8,7 @@
   {% set caption = accreditedBody.name %}
   <!-- + " (" + accreditedBody.code + ")" -->
 {% else %}
-  {% set caption = "Add accredited body" %}
+  {% set caption = "Add accredited provider" %}
 {% endif %}
 
 {% block pageTitle %}
