--- a/app/views/auth/index.njk
+++ b/app/views/auth/index.njk
@@ -148,7 +148,7 @@
         <h2 class="govuk-heading-m">Susy</h2>
 
         {{ govukTag({
-          text: "Accredited body",
+          text: "Accredited provider",
           classes: "govuk-tag--blue govuk-!-margin-bottom-5"
         }) }}
 
@@ -158,7 +158,7 @@
         }) }}
 
         <p class="govuk-body">
-          Susy is a SCITT service manager who belongs to one accredited body.
+          Susy is a SCITT service manager who belongs to one accredited provider.
         </p>
 
         <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
@@ -174,7 +174,7 @@
         <h2 class="govuk-heading-m">Grace</h2>
 
         {{ govukTag({
-          text: "Accredited body",
+          text: "Accredited provider",
           classes: "govuk-tag--blue govuk-!-margin-bottom-5"
         }) }}
 
@@ -184,7 +184,7 @@
         }) }}
 
         <p class="govuk-body">
-          Grace is a university admissions manager who belongs to one accredited body.
+          Grace is a university admissions manager who belongs to one accredited provider.
         </p>
 
         <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
@@ -205,7 +205,7 @@
         }) }}
 
         {{ govukTag({
-          text: "Accredited body",
+          text: "Accredited provider",
           classes: "govuk-tag--blue govuk-!-margin-bottom-5"
         }) }}
 
@@ -242,7 +242,7 @@
         }) }}
 
         {{ govukTag({
-          text: "Accredited body",
+          text: "Accredited provider",
           classes: "govuk-tag--blue govuk-!-margin-bottom-5"
         }) }}
 
