--- a/app/views/courses/accredited-body.njk
+++ b/app/views/courses/accredited-body.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "courses" %}
 
-{% set title = "Accredited body" %}
+{% set title = "Accredited provider" %}
 
 {% if course.id %}
   {% set caption = course.name + " (" + course.code + ")" %}
