--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -239,7 +239,7 @@
           },
           {
             key: {
-              text: "Accredited body"
+              text: "Accredited provider"
             },
             value: {
               text: course.accreditedBody.id | getOrganisationLabel
@@ -249,7 +249,7 @@
                 {
                   href: actions.change + "/accredited-body?referrer=details",
                   text: "Change",
-                  visuallyHiddenText: "accredited body"
+                  visuallyHiddenText: "accredited provider"
                 }
               ]
             } if course.status in [0,2]
