--- a/app/views/courses/preview/sections/about-training-provider.njk
+++ b/app/views/courses/preview/sections/about-training-provider.njk
@@ -5,7 +5,7 @@
       {{ trainingProvider.trainWithUs | markdownToHtml | safe }}
     {% endif %}
     {% if course.aboutAccreditingBody %}
-      <h3 class="govuk-heading-m">About the accredited body</h3>
+      <h3 class="govuk-heading-m">About the accredited provider</h3>
       {{ course.aboutAccreditingBody | markdownToHtml | safe }}
     {% endif %}
   </div>
