--- a/app/views/accredited-bodies/list.njk
+++ b/app/views/accredited-bodies/list.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "accreditedBodies" %}
 
-{% set title = "Accredited bodies" %}
+{% set title = "Accredited providers" %}
 
 {% block beforeContent %}
 
