--- a/app/views/organisations/_sub-navigation.njk
+++ b/app/views/organisations/_sub-navigation.njk
@@ -10,7 +10,7 @@
       href: actions.description,
       active: true if subNavId == "contact"
     }, {
-      text: "Accredited bodies",
+      text: "Accredited providers",
       href: "#",
       active: true if subNavId == "accreditedBodies"
     } if organisation.type == "lead_school"
