--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -134,7 +134,7 @@
         } if passport.organisation.type in ["hei","scitt"],
         {
           href: baseUrl + "/accredited-bodies",
-          text: "Accredited bodies",
+          text: "Accredited providers",
           active: primaryNavId == "accreditedBodies"
         } if passport.organisation.type == "lead_school",
         {
