Add pageTitle block

--- a/app/views/locations/edit.njk
+++ b/app/views/locations/edit.njk
@@ -8,6 +8,10 @@
   {% set title = "Add location" %}
 {% endif %}
 
+{% block pageTitle %}
+  {{ "Error: " if errors.length }}{{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
+{% endblock %}
+
 {% block beforeContent %}
 {{ govukBackLink({
   text: "Back",
