Change the edit flow

--- a/app/views/locations/show.njk
+++ b/app/views/locations/show.njk
@@ -101,7 +101,7 @@
             actions: {
               items: [
                 {
-                  href: actions.change + "/address?referrer=change",
+                  href: actions.change + "/edit?referrer=change",
                   text: "Change",
                   visuallyHiddenText: "address"
                 }
