Update the change flow

--- a/app/views/locations/check-your-answers.njk
+++ b/app/views/locations/check-your-answers.njk
@@ -88,7 +88,7 @@
               actions: {
                 items: [
                   {
-                    href: actions.change + "/address?referrer=check",
+                    href: actions.change + "?referrer=check",
                     text: "Change",
                     visuallyHiddenText: "address"
                   }
