Update page title

--- a/app/views/locations/edit.njk
+++ b/app/views/locations/edit.njk
@@ -5,7 +5,8 @@
 {% if referrer == "change" %}
   {% set title = location.name %}
 {% else %}
-  {% set title = "Add location" %}
+  {% set title = "Edit school details" %}
+  {% set caption = "Add location" %}
 {% endif %}
 
 {% block pageTitle %}
