--- a/app/views/locations/show.njk
+++ b/app/views/locations/show.njk
@@ -5,7 +5,10 @@
 {% set title = location.name %}
 
 {% block beforeContent %}
-
+{{ govukBackLink({
+  text: "Back",
+  href: actions.back
+}) }}
 {% endblock %}
 
 {% block content %}
